# haskellings

./: .gitignore  CONTRIBUTING.md  ChangeLog.md  Contributing.md  LICENSE  README.md  default.nix  flake.nix  haskellings.cabal  haskellings.nix  package.yaml  shell.nix  stack.yaml
.circleci/: config.yml
app/: Main.hs
change_logs/: ChangeLog_0900.md
exercises/basics/: Expressions.hs  Types1.hs  Types2.hs  Types3.hs  Types4.hs  Types5.hs
exercises/currying/: Curry1.hs
exercises/data/: Data1.hs  Data2.hs  Data3.hs  Data4.hs  Data5.hs  Data6.hs
exercises/functions/: Curry.hs  Functions1.hs  Functions2.hs  Functions3.hs  Functions4.hs  Functions5.hs  Functions6.hs
exercises/lists/: Lists1.hs  Lists2.hs  Lists3.hs  Lists4.hs
exercises/monads/: Applicatives.hs  Functors.hs  IO1.hs  IO2.hs  IO3.hs  Monads1.hs  Monads2.hs  Monads3.hs  Monads4.hs  Monads5.hs  Monoids.hs  Transformers1.hs  Transformers2.hs
exercises/recursion/: Recursion1.hs  Recursion2.hs  Recursion3.hs  Recursion4.hs
exercises/syntax/: Syntax1.hs  Syntax2.hs  Syntax3.hs  Syntax4.hs  Syntax5.hs  Syntax6.hs
exercises/typeclasses/: Typeclasses1.hs  Typeclasses2.hs  Typeclasses3.hs  Typeclasses4.hs  Typeclasses5.hs
exercises/types/: Types1.hs  Types2.hs
nix/: sources.json
src/: Config.hs  Constants.hs  DirectoryUtils.hs  ExecutableExercises.hs  Execute.hs  ExerciseList.hs  LoadConfig.hs  Processor.hs  RunCommands.hs  RunExercises.hs  TerminalUtils.hs  Types.hs  Utils.hs  Watcher.hs
src/Haskellings/: Constants.hs  DirectoryUtils.hs  LoadConfig.hs  Processor.hs  RunCommands.hs  TerminalUtils.hs  Types.hs  Watcher.hs
src/Haskellings/Internal/: ExecutableExercises.hs  ExerciseList.hs
src/exercises/recursion/: Recursion1.hs
src/exercises/types/: Types1.hs  Types2.hs
tests/: Main.hs  UnitTests.hs
tests/exercises/io/: IOBad1.hs  IOBad2.hs  IOGood.hs
tests/exercises/recursion/: Recursion1Bad1.hs  Recursion1Bad2.hs  Recursion2.hs
tests/exercises/types/: Types1Good.hs
tests/exercises/watcher_types/: Types1Mod1.hs  Types1Mod2.hs  Types2Mod1.hs  Types2Mod2.hs
