cabal-version: 1.12

name:           haskellings
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/haskellings#readme>
homepage:       https://github.com/githubuser/haskellings#readme
bug-reports:    https://github.com/githubuser/haskellings/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/haskellings

library
  exposed-modules:
      Config
      ExerciseList
      RunExercises
      Utils
      Watcher
  other-modules:
      Paths_haskellings
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , ansi-terminal
    , containers
    , directory
    , extra
    , fsnotify
    , HUnit
    , process
    , time
  default-language: Haskell2010

executable haskellings
  main-is: Main.hs
  other-modules:
      Paths_haskellings
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , haskellings
  default-language: Haskell2010

test-suite haskellings-tests
  main-is: Main.hs
  type: exitcode-stdio-1.0
  hs-source-dirs:
      tests
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , directory
    , haskellings
    , hspec
    , HUnit
    , time
  default-language: Haskell2010
