cabal-version: 1.12

name:           haskellings
version:        0.8.0.0
description:    Please see the README on GitHub at <https://github.com/MondayMorningHaskell/haskellings#readme>
homepage:       https://github.com/MondayMorningHaskell/haskellings#readme
bug-reports:    https://github.com/MondayMorningHaskell/haskellings/issues
author:         Author name here
maintainer:     james@mondaymorninghaskell.me
copyright:      2021 Monday Morning Haskell
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/MondayMorningHaskell/haskellings

library
  exposed-modules:
      Config
      DirectoryUtils
      ExerciseList
      ExecutableExercises
      RunCommands
      Utils
      Watcher
  other-modules:
      Paths_haskellings
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , ansi-terminal
    , containers
    , directory
    , extra
    , fsnotify
    , tasty
    , tasty-hunit
    , process
    , time
    , yaml
  default-language: Haskell2010

executable haskellings
  main-is: Main.hs
  other-modules:
      Paths_haskellings
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , extra
    , haskellings
  default-language: Haskell2010

test-suite haskellings-tests
  main-is: Main.hs
  type: exitcode-stdio-1.0
  hs-source-dirs:
      tests
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , directory
    , haskellings
    , hspec
    , HUnit
    , time
  default-language: Haskell2010

test-suite unit-tests
  main-is: UnitTests.hs
  type: exitcode-stdio-1.0
  hs-source-dirs:
      tests
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , directory
    , haskellings
    , tasty
    , tasty-hunit
  default-language: Haskell2010
